# practical_task_openAI_agents

./: README.md  pyproject.toml
hello_agent/async-agent/: pyproject.toml
hello_agent/async-agent/src/async_agent/: __init__.py
litellm_openai_agent/litellm_openai_agent/: pyproject.toml
openRouter/helpful-agent/: README.md  main.py  pyproject.toml
src/practical_agent/: __init__.py
