[project]
name = "litellm-openai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ammarasaif", email = "159964042+Ammarasaif@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.72.0",
]

[project.scripts]
litellm-openai-agent = "litellm_openai_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
